# AIshukatsu

./: .firebaserc  .gitignore  README.md  desktop-auth.html  firebase.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/: RELEASE.md
scripts/: README.md  generateCompanyContent.ts  generateCompanyIndustryMap.ts  uploadCompanyContent.ts  uploadIndustryResearch.ts
src/: App.tsx  UiShowcase.tsx  desktopAuth.ts  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddCompanyModal.tsx  AddFileModal.tsx  AddFolderModal.tsx  AddMenu.tsx  BlockInsertMenu.tsx  Breadcrumb.tsx  BubbleMenu.tsx  CompanyCombobox.tsx  CompanyDetailScreen.tsx  CompanyListScreen.tsx  ConfirmDialog.tsx  Dashboard.tsx  DashboardView.tsx  EditableCells.tsx  FileContextMenu.tsx  FileTree.tsx  LandingPage.tsx  LocationPicker.tsx  MarkdownEditor.tsx  MarkdownPage.tsx  RenameDialog.tsx  StatusBadge.tsx  TabBar.tsx  TabViewer.tsx  UpdateBanner.tsx  WelcomeScreen.tsx  fileIcons.tsx
src/data/: companyMaster.json  companyToIndustry.json  industryCompanies.json  legal.ts
src/hooks/: useAutoSave.ts  useCompanies.ts  useCompanyMaster.ts  useOpenTabs.ts  useRootDirectory.ts  useWorkspace.ts
src/lib/: cloudRestore.ts  cn.ts  companies.ts  companyContentSync.ts  companyFolderCreator.ts  companyIndustryMap.ts  companyMasterSync.ts  dashboard.ts  deadlineParser.ts  fileKind.ts  frontmatter.ts  fs.ts  handleStore.ts  htmlNodeView.ts  industryResearchSync.ts  itemNormalizer.ts  linkClickHandler.ts  markdownCloudSync.ts  onboardingState.ts  (+8 more)
(+62 files in other folders)
