[package]
name = "aisyuukatsu"
version = "0.2.5"
description = "AI就活 — Desktop"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "aisyuukatsu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ensures a second launch of the app (e.g. from a deep link) is forwarded
# to the already-running instance instead of spawning a new window. Only
# needed on desktop targets.
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
